--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular-devkit/build-angular": "^19.2.0",
     "@angular/cli": "^19.2.0",
     "@angular/compiler-cli": "^19.2.0",
+    "@bgotink/playwright-coverage": "^0.3.1",
     "@playwright/test": "1.51.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
